--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -10,6 +10,8 @@
     --color2:#B3D4FF;
     --font-color:#EAF3FF;
     --background-color: #1A1039;
+    --border-color:#845fe8;
+    --line-color: #000000;
 }
 body
 {
@@ -18,14 +20,14 @@ body
     background-color: var(--background-color);
     color:var(--font-color);
     font-family: "Roboto", sans-serif;
-    font-weight: 600;
 }
 header
 {
-    width: 50vw;
-    height: 30vh;
+    width: 100vw;
+    height: 20vh;
     display: flex;
     justify-content: space-between;
+    border-bottom: 3px solid var(--line-color);
 }
 .top
 {
@@ -42,6 +44,8 @@ header
     gap: 5rem;
     justify-content: space-between;
     list-style: none;
+    font-weight: 600;
+    font-size: 1rem;
 }
 .logoSite
 {
@@ -54,8 +58,73 @@ header
     color: var(--icon-color);
     font-size: 2rem;
 }
+.inital-phase
+{
+    
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.inital-phase p
+{
+    
+    font-size: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#part-two
+{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-weight: 800;
+    color: var(--primary-color);
+}
+.descrition-about-me
+{
+    padding: 30px;
+    display: flex;
+    justify-content: left;
+    border-radius: 20rem;
+    margin-top: 0.60rem;
+    margin-left: 4rem;
+    margin-bottom: 1.5rem;
+    width: 80vw;
+    height: 4vh;
+}
+.descrition-about-me p
+{
+    font-size: 1.4rem;
+    font-weight: 800;
+    /*see that after*/
+    font-family: "Roboto";
+}
+.descrition-about-me-connect
+{
+    display: flex;
+    flex-direction: row;
+    margin-top: 0.10rem;
+    margin-left:6rem;
+    gap: 30px;
+}
+#gitHub-top-description
+{
+    font-size: 2rem;
+    color: #ffffff;
+}
+#linkedin-top-description
+{
+    font-size: 2rem;
+    color: #ffffff;
+}
+#email-top-description
+{
+    font-size: 2.2rem;
+    color: #ffffff;
+}
 footer p
 {
+    color: var(--color);
     margin-bottom: 0;
     display: flex;
     justify-content: center;
