--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,12 +1,12 @@
 
-/*Roots*/
+/*Roots Things*/
 
 :root
 {
     --primary-color:#6A4BC0;
-    --secundary-color:#9B8FEA;
     --icon-color:#6A4BC0;
     --icon-color2:#6a36b4;
+    --constrast-color:#9674f4d1;
     --color:#D9C7FF;
     --color2:#B3D4FF;
     --color3: #6a36b4;
@@ -18,7 +18,19 @@
     --border-color2:#5404c4;
     --line-color: #000000;
 }
+/*------Body things-------------*/
 
+body
+{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--background-color);
+    color:var(--font-color);
+    font-family: "Roboto", sans-serif;
+    width: 100%;
+}
+
+/*-------Body Header Things-------*/
 
 header
 {
@@ -35,10 +47,11 @@ header
 .top
 {
     margin-left: 1rem;
-    padding: 1.5rem;
-    gap: 3rem;
+    padding: 1rem;
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: 30%;
 }
 .menu-top ul
 {
@@ -62,47 +75,44 @@ ul li
 {
     cursor: pointer;
     font-weight: 800;
-    /* font-size: 1.4rem; */
+    /* font-size: 1.4rem;*/
     transform: scale(1.1);
-    color: var(--color4);
+    color: var(--constrast-color);
 }
 .logoSite
 {
-    margin-left: 17.5rem;
+    cursor: pointer;
+    margin-left: 16.5rem;
 }
-.icon-ms-top
+.icon-top
 {
-    padding-left: 35rem;
     color: var(--icon-color);
     font-size: 2rem;
     transition: 500ms;
+    padding-left:34rem;
+    cursor: pointer;
 }
-.icon-ms-top:hover
+.icon-top:hover
 {
     color: #581cfd;
     transition: 500ms;
 }
-body
+
+/*-------Body Main Things---------*/
+#icon-main 
 {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--background-color);
-    color:var(--font-color);
-    font-family: "Roboto", sans-serif;
-}
-#icon-main /*add fuction*/
-{
+    
     color:  #400cd1;
     font-size: 6rem;
     rotate: calc(+52deg);
     z-index:-1;
     position: absolute;
-    padding-top: 22px;
-    margin-left: 1086px;
     margin-bottom: 3080;
+    padding-left: 20rem;
 }
 .inital-phase
 {
+    width: 100%;
     font-weight: 600;
     display: flex;
     flex-direction: column;
@@ -113,78 +123,87 @@ body
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 3rem;
+    margin-top: 8;
     transition: 2.4;
-}
-.inital-phase button
-{
-    cursor: pointer;
-    color: #630fff;
-    background-color:#ffffff;
-    display: flex;
-    justify-content: center;
+    margin: 5px;
+    margin-left: 40px;
+    color:#ffffff;
     font-family: "Roboto";
+    font-size: 20px;
     font-weight: 800;
-    font-size: 22px;
-    padding: 14px;
-    margin-right: 780px;
-    width: 23%;
-    border-radius: 20px;
-    margin-top: 15px;
-    transition: 2.5;
-    border: 3.5px solid #000000;
-    gap: 30px;
-}
-.inital-phase button i
-{
-    font-size: 28px;
-}
-.inital-phase button:hover
-{
-    color: #ffffff;
-    background-color:#6A4BC0;
-    transition: 2.5;
 }
 #part-one
 {
     backface-visibility: visible;
-    font-size:8rem;
+    font-size:6rem;
     font-family: "Oswald", sans-serif;
     font-weight: 700;
 }
 #part-two
 {
-    font-size: 4.5rem;
+    font-size: 4rem;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-weight: 800;
     color: var(--primary-color);
 }
-.descrition-about-me
+.inital-phase button
 {
-    padding: 30px;
     display: flex;
-    justify-content: left;
-    border-radius: 20rem;
-    margin-top: 0.60rem;
-    margin-left: 4rem;
+    cursor: pointer;
+    background-color:#bfa8ffc0;
+    margin-right: 780px;
+    margin-top: 0.75rem;
+    width: 20%;
+    height: 5%;
+    border-radius: 30px;
+    transition: 2.5;
+    border: 3.5px solid #000000;
+    gap: 2px;
+}
+.inital-phase button:hover
+{
+    color: #ffffff;
+    background-color: #b3abdb;
+    transition: 2.5;
+}
+#icon-arrow
+{
+    rotate: calc(330deg);
+    font-size: 30px;
+    font-weight: 800;
+    color:#000000;
+}
+/*-------Description about me-----------*/
+.details-about-me
+{
+    padding: 2rem;
+    margin: 2rem;
+    display: flex;
+    border-radius: 15rem;
     margin-bottom: 1.5rem;
-    width: 80vw;
-    height: 4vh;
+    width: 75vw;
+    height: 15vh;
+    background-color:#cec6ff85;
+    border: 3px solid black;
+}
+.details-about-me:hover
+{
+    background-color: #cdc6ffa5;
 }
 .descrition-about-me p
 {
+    cursor: pointer;
     font-size: 1.4rem;
-    font-weight: 800;
     /*see that after*/
-    font-family: "Roboto";
+    font-family:'Times New Roman', Times, serif;
 }
 .descrition-about-me-connect
 {
     display: flex;
     flex-direction: row;
-    margin-top: 0.10rem;
-    margin-left:6rem;
-    gap: 30px;
+    margin-left:3rem;
+    gap:1.5rem;
+    font-size: 1rem;
 }
 #gitHub-top-description,
 #linkedin-top-description,
@@ -193,11 +212,44 @@ body
     font-size: 2rem;
     color: #ffffff;
 }
+
+/*Body Main Video*/
+
 .video-content iframe
 {
-    padding: 40px;
-    margin-left:380px ;
+    padding: 2%;
+    margin-left:20rem;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*footer Things*/
 footer
 {
     font-family: "Roboto"; 
