--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -28,6 +28,7 @@ body
     color:var(--font-color);
     font-family: "Roboto", sans-serif;
     width: 100%;
+    transition: 1s;
 }
 
 /*-------Body Header Things-------*/
@@ -38,11 +39,12 @@ header
     top: 0;
     background-color:var(--background-color) ;
     z-index: 999;
-    width: 100vw;
-    height: 10vh;
+    width: 100%;
+    height: 12%;
     display: flex;
     justify-content: space-between;
     border-bottom: 3.5px solid var(--line-color); 
+    border-top: 0;
 }
 .top
 {
@@ -79,10 +81,14 @@ ul li
     transform: scale(1.1);
     color: var(--constrast-color);
 }
-.logoSite
+#logo-top
 {
     cursor: pointer;
     margin-left: 16.5rem;
+}
+#logo-top:hover
+{
+    transform: scale(1.1);
 }
 .icon-top
 {
@@ -99,43 +105,47 @@ ul li
 }
 
 /*-------Body Main Things---------*/
+
 #icon-main 
 {
-    
+    margin: 0;
+    padding: 0;
     color:  #400cd1;
-    font-size: 6rem;
-    rotate: calc(+52deg);
+    font-size: 5.5rem;
+    rotate: calc(+40deg);
     z-index:-1;
     position: absolute;
-    margin-bottom: 3080;
-    padding-left: 20rem;
+    margin-left: 770px;
+    margin-top:180px;
+    width: 20%;
+    height: 10%;
 }
 .inital-phase
 {
-    width: 100%;
     font-weight: 600;
+    width: 100%;
+    padding: 5rem 20rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 80px;
 }
 .inital-phase p
 {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 8;
     transition: 2.4;
-    margin: 5px;
-    margin-left: 40px;
+    margin-left: 30px;
     color:#ffffff;
     font-family: "Roboto";
-    font-size: 20px;
+    font-size: 20;
     font-weight: 800;
 }
 #part-one
 {
     backface-visibility: visible;
-    font-size:6rem;
+    font-size:5rem;
     font-family: "Oswald", sans-serif;
     font-weight: 700;
 }
@@ -146,77 +156,93 @@ ul li
     font-weight: 800;
     color: var(--primary-color);
 }
-.inital-phase button
-{
-    display: flex;
-    cursor: pointer;
-    background-color:#bfa8ffc0;
-    margin-right: 780px;
-    margin-top: 0.75rem;
-    width: 20%;
-    height: 5%;
-    border-radius: 30px;
-    transition: 2.5;
-    border: 3.5px solid #000000;
-    gap: 2px;
-}
-.inital-phase button:hover
-{
-    color: #ffffff;
-    background-color: #b3abdb;
-    transition: 2.5;
-}
-#icon-arrow
-{
-    rotate: calc(330deg);
-    font-size: 30px;
-    font-weight: 800;
-    color:#000000;
-}
+
+
 /*-------Description about me-----------*/
-.details-about-me
+
+.details-about-me 
 {
-    padding: 2rem;
-    margin: 2rem;
+    gap: 2rem; 
+    margin: 4rem;
     display: flex;
-    border-radius: 15rem;
-    margin-bottom: 1.5rem;
-    width: 75vw;
-    height: 15vh;
-    background-color:#cec6ff85;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5rem;
+    width: 90vw;
+    height: 20vh;
+    background-color:#303031e7;
     border: 3px solid black;
 }
-.details-about-me:hover
-{
-    background-color: #cdc6ffa5;
-}
-.descrition-about-me p
-{
-    cursor: pointer;
-    font-size: 1.4rem;
-    /*see that after*/
-    font-family:'Times New Roman', Times, serif;
-}
-.descrition-about-me-connect
+.descrition-about-me 
 {
     display: flex;
+}
+.descrition-about-me p 
+{
+    width: 100%;
+    padding: 1.9rem;
+    cursor: pointer;
+    font-size: 1.4rem;
+    font-family:'Times New Roman', Times, serif;
+    background-color: var(--constrast-color);
+    border-radius: 4rem;
+    border: 2px solid #000000;
+}
+.descrition-about-me:hover
+{
+    color: #000000;
+    transform: scale(1);
+    transition: 1.4s;
+    transform: perspective(solid);
+}
+#ver-projetos:hover
+{
+    color: #000000;
+    background-color: #630fff;
+}
+.descrition-about-me-connect 
+{
+    gap: 4rem;
+    display: flex;
     flex-direction: row;
-    margin-left:3rem;
-    gap:1.5rem;
-    font-size: 1rem;
+    margin-left:1rem;
+    margin-right: 1rem;
 }
 #gitHub-top-description,
 #linkedin-top-description,
-#email-top-description
+#email-top-description 
 {
+    top: 9000px;
     font-size: 2rem;
     color: #ffffff;
+    margin: 1rem 1rem ;
 }
+#ver-projetos
+{
+    font-size: 1.2rem;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 5rem;
+    font-family:"Roboto", sans-serif;
+    font-weight: 800;
+    background: linear-gradient(145deg, #bfa8ffc0, #9674f4d1);
+    border: 2px solid black;
+}
+.descrition-about-me-connect i
+{
+    color: #000000;
+    rotate: calc(380grad);
+    font-size: 1.7rem;
+}
+
+
+
 
 /*Body Main Video*/
 
 .video-content iframe
 {
+    margin: 8rem;
     padding: 2%;
     margin-left:20rem;
 }
