atualizations of images

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -257,10 +257,11 @@ ul li
 }
 
 /*Conhecimentos*/
-
+#css-img,
 #html-img
 {
-    backdrop-filter: calc(7.1);
+    width: 30%;
+    height: 5%;
 }
 
 
