--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,373 +1,23 @@
-
-/*Roots Things*/
-
-:root
-{
-    --primary-color:#6A4BC0;
-    --icon-color:#6A4BC0;
-    --icon-color2:#6a36b4;
-    --constrast-color:#9674f4d1;
-    --color:#D9C7FF;
-    --color2:#B3D4FF;
-    --color3: #6a36b4;
-    --color4:#630fff;
-    --font-color:#EAF3FF;
-    --background-color: #1A1039;
-    --background-color2:#6a4bca;
-    --border-color:#845fe8;
-    --border-color2:#5404c4;
-    --line-color: #000000;
-}
-/*------Body things-------------*/
-
-body
+/*body
 {
     display: flex;
-    flex-direction: column;
-    background-color: var(--background-color);
-    color:var(--font-color);
-    font-family: "Roboto", sans-serif;
-    width: 100%;
-    transition: 1s;
-}
-
-/*-------Body Header Things-------*/
-
-header
-{
-    position: sticky;
-    top: 0;
-    background-color:var(--background-color) ;
-    z-index: 999;
-    width: 100%;
-    height: 12%;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 3.5px solid var(--line-color); 
-    border-top: 0;
+    background-color:blueviolet ;
 }
 .top
 {
-    margin-left: 1rem;
-    padding: 1rem;
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 30%;
+    flex-direction: column;
 }
-.menu-top ul
+.ul-top
 {
     display: flex;
-    flex-direction: row;
-    gap: 5rem;
-    font-family: "Oswald", sans-serif;
-    justify-content: space-between;
+    justify-content: center;
     list-style: none;
-    font-size: 1rem;
-   font-weight: 900;
+    width: 50%;
 }
-ul li
-{
-    transition: 0.6s;
-}  
-#Home:hover,
-#Projects:hover,
-#About:hover,
-#Contact:hover
-{
-    cursor: pointer;
-    font-weight: 800;
-    /* font-size: 1.4rem;*/
-    transform: scale(1.1);
-    color: var(--constrast-color);
-}
-#logo-top
-{
-    transition: 1s;
-    cursor: pointer;
-    margin-left: 16.5rem;
-}
-#logo-top:hover
-{
-    transform: scale(1.1);
-}
-.icon-top
-{
-    color: var(--icon-color);
-    font-size: 2rem;
-    transition: 500ms;
-    padding-left:34rem;
-    cursor: pointer;
-}
-.icon-top:hover
-{
-    color: #581cfd;
-    transition: 500ms;
-}
-
-/*-------Body Main Things---------*/
-
-#icon-main 
-{
-    margin: 0;
-    padding: 0;
-    color:  #400cd1;
-    font-size: 5.5rem;
-    rotate: calc(+40deg);
-    z-index:-1;
-    position: absolute;
-    margin-left: 800px;
-    margin-top:180px;
-    width: 20%;
-    height: 10%;
-}
-.inital-phase
-{
-    font-weight: 600;
-    width: 100%;
-    padding: 5rem 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 80px;
-}
-.inital-phase p
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 2.4;
-    margin-left: 30px;
-    color:#ffffff;
-    font-family: "Roboto";
-    font-size: 20;
-    font-weight: 800;
-}
-#part-one
-{
-    backface-visibility: visible;
-    font-size:5rem;
-    font-family: "Oswald", sans-serif;
-    font-weight: 700;
-}
-#part-two
-{
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size: 4rem;
-    font-weight: 800;
-    
-}
-#part-two:hover
-{
-    cursor: pointer;
-    transition: 1s;
-    transform:scale(1.1);
-    color: var(--primary-color);
-}
-
-
-/*-------Description about me-----------*/
-
-.details-about-me 
-{
-    gap: 2rem; 
-    margin: 4rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 5rem;
-    width: 90vw;
-    height: 20vh;
-    background-color:#303031e7;
-    border: 3px solid black;
-}
-.descrition-about-me 
-{
-    display: flex;
-}
-.descrition-about-me p 
-{
-    width: 100%;
-    padding:2.7rem;
-    cursor: pointer;
-    font-size: 1.4rem;
-    font-family:'Times New Roman', Times, serif;
-    background-color: var(--constrast-color);
-    border-radius: 4rem;
-    border: 2px solid #000000;
-}
-.descrition-about-me:hover
-{
-    color: #000000;
-    transform: scale(1);
-    transition: 1.4s;
-    transform: perspective(solid);
-}
-
-
-.descrition-about-me-connect 
-{
-    gap: 4rem;
-    display: flex;
-    flex-direction: row;
-    margin-left:1rem;
-    margin-right: 0.70rem;
-    margin-top: 3.5rem;
-}
-#gitHub-top-description,
-#linkedin-top-description,
-#email-top-description 
-{
-    font-size: 2rem;
-    color: #ffffff75;
-}
-#gitHub-top-description:hover,
-#linkedin-top-description:hover,
-#email-top-description:hover,
-#icon-arrow:hover
-{
-    color: #ffffff;
-}
-
-#ver-projetos
-{
-    margin-left: 5px;
-    margin-bottom: 50px;
-    cursor: pointer;
-    width: 100%;
-    padding: 10px;
-    border-radius: 40px;
-    font-family:"Roboto", sans-serif;
-    font-weight: 600;
-    background: linear-gradient(145deg, #bfa8ffc0, #9674f4d1);
-    border: 2px solid black;
-}
-#ver-projetos:hover
-{
-    color: #000000;
-    background-color: #630fff;
-}
-
-/*Body Main Video*/
-
-.video-content iframe
-{
-    cursor: pointer;
-    margin: 4rem;
-    padding: 2%;
-    margin-left:20rem;
-}
-
- /*KNOWLEDGE  =====*/
-.main-knowledge
-{
-    transition: 1s ease-in-out;
-    width: 100%;
-}   
-#word-knowledge
-{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 2rem;
-    width: 100%;
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding: 12px;
-    color:#d3d3d3;
-    background-color: var(--background-color2);
-    border: 2px solid white;
-    transition:  0.25s ease;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-#word-knowledge:hover,
-#knowledge-img:hover
-{
-    transform: scale(1.02);
-    color: #ffffff;
-    background-color: var(--background-color2); 
-    
-}
-#knowledge-img
-{
-    cursor: pointer;
-    transition: scale(1.1) 3s;
-    margin-left: 9.5rem;
-    margin-bottom: 4rem;
-    border: 4px solid #ffffff;
-}
-
-
-/*Projects*/
-.main-projects
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.main-projects h2
-{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 2.5rem;
-    margin-top: 6rem;
-    margin-bottom: 4rem;
-    display: flex;
-    justify-content: center;
-    color: #ffffff99;
-}
-.main-projects h2:hover
-{
-    color: #ffffff;
-    transform: scale(1.02);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*footer Things*/
 footer
 {
-    font-family: "Roboto"; 
-    font-weight: 400;
-    padding-bottom: 0;
-    width: 100vw;
-    height: 20vh;
-    transition: 1s;
-    color: #ffffff;
-    /*background-image: url('../images/header-image.png'); 
-    border-image: 4px solid var(--line-color);*/
-}
-footer p
-{
-    color: var(--color);
-    margin-bottom: 0;
     display: flex;
-    justify-content: center;
-}
-footer:hover
-{
-    
-    font-family: "Roboto"; 
-    transform: scale(1.1);
-}
-
+    flex-direction: row;
+    bottom: 0;
+}/*
