--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,23 +1,217 @@
-/*body
+.body-container 
+{
+    /*padding: 0px 2px !important;*/
+    font-family: "Oswald";
+    background-color: #2b0053;
+    color: aliceblue;
+}
+header 
+{
+    position: sticky;
+    z-index: 999;
+    top: 0;
+    width: 100%;
+    padding: 12px 24px;
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    background-color:#824eb3;
+
+}
+.ul-top,
+a
 {
     display: flex;
-    background-color:blueviolet ;
+    gap: 27px; 
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    font-weight: 800;
+    font-family: "Roboto";
+    text-decoration: none;
+    color: #000000;
+    transition: 1s;
 }
-.top
+#home:hover,
+#projects:hover,
+#about:hover,
+#contact:hover
 {
+    cursor: pointer;
+    color: #ffffff;
+    transition: 1s;
+    transform: scale(1.1);
+    
+}
+.icons-top 
+{
+    display: flex;
+    gap: 34rem; 
+}
+#favio-icon-top
+{
+    transition: 1s;
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    
+}
+#favio-icon-top:hover
+{
+    transition: 1s;
+    transform: scale(1.1);
+}
+#butterfly-icon-top
+{
+    transition: 0.6s;
+    color: #581cfd;
+    font-size: 30px;
+}
+#butterfly-icon-top:hover
+{
+    transition: 1s;
+    color: #982aff;
+  
+
+}
+                              /*INITAL PHASE*/
+
+.inital-part
+{
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    
+}
+.inital-part h1
+{
+    font-family: "Oswald";
+    padding: 20PX;
+    font-size: 80px;
+}
+.highlighted-text
+{
+    transition: 1s;
+    font-weight: 900;
+}
+.highlighted-text:hover
+{
+    color: #5300ce;
+    transition: 1s;
+    transform: scale(1.1);
+}
+#butterfly-inital-part
+{
+    transform: rotate(25deg);
+    font-size: 135px;
+    transition: 0.8s;
+}
+#butterfly-inital-part:hover
+{
+    color: #8401fe;
+    
+}
+
+                                 /*DETAILS ABOU ME*/
+
+.details-about-me
+{
+    font-family: sans-serif;
+    font-weight: 800;
+    padding: 40px;
+    width: 100%; 
+    gap: 40px;
     display: flex;
     flex-direction: column;
+    justify-items: center;
 }
-.ul-top
+.details-about-me h2
+{
+    margin-left: 140px;
+    justify-content: center;
+    color: #cf7b7b;
+}
+.description
+{
+    margin-left: 140px;
+    font-size: 20px;
+}
+.description:hover
+{
+    color: #000000;
+    transition: 1s;
+}
+.Contatct-links
+{
+    display: flex;
+    gap: 20px;
+    padding-left: 140px;
+}
+.Contatct-links a
+{
+    font-size: 40px;
+    color: #646464;
+}
+.Contatct-links a:hover
+{ 
+    color: #ffffff;
+    transition: 1s;
+    transform: scale(1.1);
+}
+.Contatct-links button
+{
+    transition: 1s;
+    font-size: 20px;
+    padding: 10px;
+    background-color: #7934a7;
+    color: #ffffff;
+    border: 2px solid #000000;
+    border-radius: 30px;
+    display: flex;
+    gap: 10px;
+}
+.Contatct-links button:hover
+{
+    transition: 1s;
+    color: #0c0b0b;
+    background-color: #ffffff;
+    border-color: #7934a7;
+    font-family: sans-serif;
+}
+
+                               /*VIDEO-CONTENT*/
+
+.video-content
 {
     display: flex;
     justify-content: center;
-    list-style: none;
-    width: 50%;
-}
-footer
+    padding: 140px 40px;
+}         
+
+                            /* KNOWLEDGE */
+.knowledge
 {
     display: flex;
-    flex-direction: row;
-    bottom: 0;
-}/*
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: 180px;
+
+}
+.knowledge h2
+{
+    font-family:"ital";
+    font-weight: 400;
+    font-size: 40px;
+    color: #cf7b7b;
+    margin-bottom: 20px;
+
+}
+#knowledge-img
+{
+    width: 50%;
+    margin-top: 30px;
+    transform: scale(1.1);
+    cursor: pointer;
+}
