--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -244,23 +244,31 @@ a
     justify-content: center;
     margin-bottom: 90px;
     /*background-color: #c49999;*/
-
 }
 .projects h2
 {
     font-family: "Poppins", sans-serif;
-    color: #e3b198;
+    color: #ffb794;
+    font-size: 70px;
 }
 .projects i
 {
-    font-size: 50px;
+    font-size: 80px;
     margin-bottom: 30px;
 }
 .projects summary
 {
-    color: #f6eb76;
+    color: #ffb794;
     margin-bottom: 40px;
     font-size: 30px;
+}
+#observation
+{
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+    margin-left: 70px;
+    color: #bab5aa;
 }
 .projects details
 {
@@ -270,10 +278,12 @@ a
     font-family: "Poppins", sans-serif;
     padding: 15px;
 }
+                /*PIANO*/
 .piano-project
 {
+    margin: 25px;
     padding: 20px;
-    border: 3px solid white;
+    border: 3px solid rgb(255, 255, 255);
     display: flex;
 }
 .piano-project img
@@ -285,6 +295,120 @@ a
     font-size: 24px;
     margin-left: 8px;
 }
+            /*MEMORY*/
+
+.memory-project
+{
+    margin: 25px;
+    padding: 20px;
+    border: 3px solid white;
+    display: flex;
+}
+.memory-project img
+{
+    width: 14%;
+}
+.memory-project p
+{
+    font-size: 24px;
+    margin-left: 8px;
+}
+
+            /*POKEDEX*/
+
+.pokedex-project
+{
+    padding: 20px;
+    border: 3px solid white;
+    display: flex;
+    margin: 25px;
+}
+.pokedex-project img
+{
+    width: 25%;
+}
+.pokedex-project p
+{
+    font-size: 24px;
+    margin-left: 8px;
+}
 
 
+.main-about-me
+{
+    margin-top: 140px;
+    margin-bottom: 160px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main-about-me h2
+{
+    color: #ffb794;
+    margin-bottom: 10px;
+    font-size: 70px;
+}
+#text-about-me
+{
+    margin: 20px;
+    padding: 30px;
+    font-size: 24px;
+    color: #000000;
+    border: 6px solid rgb(19, 10, 30);
+    background-color: rgb(193, 193, 193);
+    border-radius: 60px;
+}
+#languages
+{
+    display: flex;
+    font-size: 25px;
+    margin-bottom: 20px;
+    transition: 1s;
+}
+#conecte-se-comigo
+{
+    font-size: 35px;
+    transition: 1s;
+    cursor: pointer;
+}
+#curriculum
+{
+    margin-top: 25px;
+    font-size: 20px ;
+    transition: 1s;
+    border: 2px solid #000000;
+    padding: 12px;
+    border-radius: 60px;
+    color: #000000;
+    text-transform: uppercase;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: #ffffff;
+    cursor: pointer;
+}
+#languages:hover,
+#conecte-se-comigo:hover
+{
+    transform: scale(1.1);
+    transition: 1s;
+    font-weight: 400;
+}
+#curriculum:hover
+{
+    transform: scale(1.1);
+    transition: 1s;
+    color: #ffffff;
+    background-color: #000000;
+    border-color: #ffffff;
 
+}
+#curriculum i
+{
+    font-size: 25px;
+    font-weight: 40;
+}
+footer
+{
+    display: flex;
+    justify-content: center;
+    margin: 15px;
+}
