--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -336,11 +336,15 @@ a
 
 .main-about-me
 {
-    margin-top: 140px;
+    margin-top: 160px;
     margin-bottom: 160px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.main-about-me img
+{
+    
 }
 .main-about-me h2
 {
@@ -362,35 +366,41 @@ a
 {
     display: flex;
     font-size: 25px;
-    margin-bottom: 20px;
-    transition: 1s;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    transition: 1.5s;
+    font-weight: 200;
+
 }
 #conecte-se-comigo
 {
-    font-size: 35px;
-    transition: 1s;
+    margin-top: 15px;
+    font-size: 25px;
+    transition: 1.5s;
     cursor: pointer;
-}
-#curriculum
-{
-    margin-top: 25px;
-    font-size: 20px ;
-    transition: 1s;
-    border: 2px solid #000000;
-    padding: 12px;
-    border-radius: 60px;
-    color: #000000;
-    text-transform: uppercase;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-color: #ffffff;
-    cursor: pointer;
+    color: white;
+    font-weight: 200;
+
 }
 #languages:hover,
 #conecte-se-comigo:hover
 {
     transform: scale(1.1);
-    transition: 1s;
+    transition: 2s;
     font-weight: 400;
+}
+#curriculum
+{
+    margin-top: 25px;
+    font-size: 20px ;
+    transition: 2s;
+    border: 2px solid #000000;
+    padding: 12px;
+    border-radius: 60px;
+    color: #000000;
+    text-transform: uppercase;
+    background-color: #ffffff;
+    cursor: pointer;
 }
 #curriculum:hover
 {
