--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -27,7 +27,7 @@ header
     display: flex;
     justify-content: space-between; 
     align-items: center; 
-    background-color:#824eb3;
+    background-color:#4f4bcc;
 }
 .ul-top,
 a
@@ -41,7 +41,7 @@ a
     font-weight: 800;
     font-family: "Roboto";
     text-decoration: none;
-    color: #ffffff;
+    color: #9b9494;
     transition: 1s;
 }
 #home:hover,
@@ -50,7 +50,7 @@ a
 #contact:hover
 {
     cursor: pointer;
-    color: #f2cfa4;
+    color: #ffffff;
     transition: 1s;
     transform: scale(1.1);
     
@@ -379,80 +379,100 @@ a
 
 
 /*ABOUT ME*/
+
+
+
+
 .main-about-me
 {
     width: 100%;
-    padding:30px;
+    padding:40px;
+    display: flex;
+    flex-direction: column;
 }
 .sobre-mim 
 {
+    top: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: #ffb794;
     font-size: 40px;
 }
+.about-me-informations
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 25px;
+    margin-bottom: 40px;
+}
 .main-about-me img
 {
     display: flex;
-    width: 25%;
+    flex-direction: row;
+    justify-content: center;
+    width: 22%;
     border-radius: 50%;
     border: 6px solid #130a1e;
-    margin-bottom: 30px;
 }
-
 #text-about-me
 {
     display: flex;
-    padding: 40px;
-    font-size: 20px;
-    color: #000000;
-    border: 4px solid #f6f3fa;
-    color: #c1c1c1;
-    border-radius: 60px;
+    flex-direction: column;
+    font-size: 25px;
+    padding: 20px;
+    border: 3px solid #555454;
+    border-radius: 20px;
 }
-
 #languages
 {
     font-family: "Roboto", sans-serif;
-    display: flex;
-    font-size: 25px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    transition: 1.5s;
+    font-size: 28px;
     font-weight: 400;
-
+    padding-left: 20px;
+}
+#languages span
+{
+    font-size: 30px;
+    color: #ffb794;
+    font-weight: 600;
+    padding: 4px;
 }
 #conecte-se-comigo
 {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    margin-top: 15px;
-    font-size: 25px;
-    transition: 1.5s;
+    font-size: 22px;
     cursor: pointer;
-    color: white;
+    margin-top: 18px;
+    margin-left: 24px;
+    color: #ffb794;
+    width: 16%;
+    padding: 5.4PX;
+    border: 2px solid #fff4f4;
+    border-radius: 20PX;
 }
-#languages:hover,
 #conecte-se-comigo:hover
 {
-    transform: scale(1.1);
-    transition: 2s;
-    font-weight: 400;
+    color: #ffffff;
+    border-color: #ffb794;
 }
 #curriculum
 {
     font-family: "Roboto", sans-serif;
+    margin-left: 500PX;
     font-weight: 600;
-    margin-top: 25px;
+    margin-top: 15px;
     font-size: 20px ;
     transition: 2s;
-    border: 2px solid #fffdfd;
-    padding: 12px;
+    border: 2px solid #000000;
+    width: 13%;
+    padding: 10px;
     border-radius: 60px;
     color: #ffffff;
     text-transform: uppercase;
-    background-color: #0f0e0e;
+    background-color: #5a85e2;
     cursor: pointer;
 }
 #curriculum:hover
@@ -461,14 +481,47 @@ a
     transform: scale(1.1);
     transition: 1s;
     color: #ffffff;
-    background-color: #8948b4;
-    border-color: #000000;
+    border-color: #fffdfd;
 }
 #curriculum i
 {
     font-size: 25px;
     font-weight: 40;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
