--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -489,8 +489,87 @@ a
     font-weight: 40;
 }
 
+.formation
+{
+    padding: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.formation h2
+{
+    font-family: "Poppins", sans-serif;
+    font-size: 40px;
+    color: #ffb794;
+    margin-right: 30px;
+    margin-bottom: 20px;
+}
+.formation img
+{
+    width: 6%;
+    margin-right: 30px;
+    border: 3px solid #f66f00;
+}
+.formation p 
+{
+    font-size: 22px;
+    width: 50%;
+    line-height: 1.5;
+}
+
+.curses
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 70px;
+    font-family: "Poppins", sans-serif;
+        gap: 40px;
 
 
+}
+.curses h2
+{
+    color: #ffb794;
+    font-size: 60px;
+    margin-bottom: 15px;
+}
+.curses summary
+{
+    color: #e3e1e1;
+    margin-bottom: 50px;
+    margin-left: 40px;
+    font-size: 25px;
+}
+.curses div
+{
+    transition: 1s;
+    padding: 15px;
+    border : 3px solid #ffffff;
+}
+div span p
+{
+    font-family: "poppins", sans-serif;
+    font-size: 20px;
+    color: #d4d0d0;
+    cursor: pointer;
+    transition: 1s;
+    margin-top: 30px;
+    margin-left: 220px;
+    width: 28%;
+    padding:5px;
+    border-radius: 30px;
+    border: 2px solid #ffee00;
+}
+.curses span p:hover
+{
+    font-weight: 400;
+    background-color: #eceacb;
+    border-color: #fffb00;
+    color: #000000;
+    transition: 1s;
+}
 
 
 
