--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -44,23 +44,15 @@ a
     font-weight: 800;
     font-family: "Roboto";
     text-decoration: none;
-    color: #9b9494;
+    color: #7f7f7f;
     transition: 1s;
 }
-.Projects:hover,
-.About:hover,
-.Curses:hover,
-.Home:hover
+.ul-top, a:hover
 {
     color: #ffffff;
     transition: 1s;
     transform: scale(1.1);
 }
-
-
-
-
-
 .icons-top 
 {
     display: flex;
@@ -151,11 +143,12 @@ a
 {
     margin-left: 140px;
     font-size: 20px;
+    transition: 2ms;
 }
 .description:hover
 {
-    color: #000000;
-    transition: 1s;
+    color: #686868;
+    transition: 2ms;
 }
 .Contatct-links
 {
@@ -180,9 +173,9 @@ a
     transition: 1s;
     font-size:20px;
     padding: 10px;
-    background-color: #7934a7;
     color: #ffffff;
-    border: 2px solid #000000;
+    border: 2px solid #a8a672;
+    background-color: #2b0053;
     border-radius: 30px;
     display: flex;
     gap: 10px;
@@ -191,10 +184,8 @@ a
 .Contatct-links button:hover
 {
     transition: 1s;
-    color: #0c0b0b;
-    background-color: #ffffff;
-    border-color: #7934a7;
-    font-family: sans-serif;
+    background-color: hsl(274, 52%, 45%);
+    font-family: sans-rgb(0, 0, 0);
     font-family: "Roboto", sans-serif;
     font-weight: 700;
 
@@ -420,7 +411,7 @@ a
     justify-content: center;
     width: 22%;
     border-radius: 50%;
-    border: 6px solid #130a1e;
+    border: 6px solid #ffffff;
 }
 #text-about-me
 {
@@ -428,7 +419,8 @@ a
     flex-direction: column;
     font-size: 25px;
     padding: 20px;
-    border: 3px solid #555454;
+    color: #ffffff;
+    border: 3px solid #ffea03;
     border-radius: 20px;
 }
 #languages
@@ -454,15 +446,15 @@ a
     margin-top: 18px;
     margin-left: 24px;
     color: #ffb794;
-    width: 14%;
-    padding: 5.4PX;
+    width: 15%;
+    padding: 12px;
     border: 2px solid #fff4f4;
-    border-radius: 20PX;
+    border-radius: 30PX;
 }
 #conecte-se-comigo:hover
 {
     color: #ffffff;
-    border-color: #ffb794;
+    border-color: #fbff00;
 }
 #curriculum
 {
@@ -531,6 +523,7 @@ a
     justify-content: center;
     margin-bottom: 70px;
     font-family: "Poppins", sans-serif;
+    color:#c0c0c0 ;
 }
 .curses h2
 {
@@ -540,7 +533,7 @@ a
 }
 .curses summary
 {
-    color: #e3e1e1;
+    color: #ffffff;
     margin-bottom: 50px;
     margin-left: 40px;
     font-size: 25px;
@@ -550,7 +543,7 @@ a
     transition: 1s;
     padding: 15px;
     margin-bottom: 40px;
-    border: 4px solid #000000;
+    border: 4px solid #ffffff;
 }
 .curses img
 {
@@ -561,22 +554,22 @@ div span p
 {
     font-family: "poppins", sans-serif;
     font-size: 20px;
-    color: #d4d0d0;
+    color: #ffffff;
     cursor: pointer;
     transition: 1s;
     margin-top: 30px;
     margin-left: 220px;
-    width: 26%;
-    padding:5px;
-    border-radius: 40px;
+    width: 30%;
+    padding:18px;
+    border-radius: 65px;
     border: 2px solid #ffee00;
 }
 .curses span p:hover
 {
     font-weight: 400;
-    background-color: #eceacb;
+    background-color: #000000;
     border-color: #fffb00;
-    color: #000000;
+    color: #ffffff;
     transition: 1s;
 }
 .redirect
@@ -587,7 +580,7 @@ div span p
     margin-top: 40px;
     margin-bottom: 60px;
     transition: 1s;
-    color: #333;
+    color: #000000;
     padding: 20px;
     width: 68%;
     margin-left: 220px;
