--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,7 +13,6 @@ font-family: "Press Start 2P", system-ui;*/
 
 .body-container 
 {
-    touch-action: none;
     /*padding: 0px 2px !important;*/
     font-family: "Oswald";
     background-color: #2b0053;
@@ -31,10 +30,19 @@ header
     align-items: center; 
     background-color:#3f2e82;
 }
+ul
+{
+    display: flex;
+    cursor: pointer;
+}
+.ul-top
+{
+    font-size: 15px;
+    display: flex;
+}
 .ul-top,
 a
 {
-    display: flex;
     gap: 27px; 
     cursor: pointer;
     list-style: none;
@@ -133,8 +141,8 @@ a
 }
 .details-about-me h2
 {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
+    font-family:  sans-serif;
+    font-weight: 130px;
     margin-left: 140px;
     justify-content: center;
     color: #e2ba89;
@@ -143,52 +151,58 @@ a
 {
     margin-left: 140px;
     font-size: 20px;
-    transition: 2ms;
+    transition: 1s;
 }
 .description:hover
 {
     color: #686868;
-    transition: 2ms;
+    transition: 1s;
 }
-.Contatct-links
+
+/*Contato*/
+.Contato-links
 {
     display: flex;
     gap: 20px;
     padding-left: 140px;
 }
-.Contatct-links a
+#gitHub-top-description,
+#linkedin-top-description,
+#email-top-description
 {
     font-size: 40px;
     color: #393939;
 }
-.Contatct-links a:hover
+.Contato-links a:hover
 { 
     color: #ffffff;
     transition: 1s;
     transform: scale(1.1);
 }
-.Contatct-links button
+#ver-projetos
 {
     font-family: "Roboto", sans-serif;
     transition: 1s;
-    font-size:20px;
-    padding: 10px;
-    color: #ffffff;
+    font-size: 15px;
+    padding: 15px;
+    color: #000000;
     border: 2px solid #a8a672;
     background-color: #2b0053;
     border-radius: 30px;
     display: flex;
-    gap: 10px;
-    touch-action: none;
 }
-.Contatct-links button:hover
+#ver-projetos i
 {
+    margin-left: 6px;
+}
+#ver-projetos:hover
+{
+    position: relative;
+    color :#010101;
     transition: 1s;
-    background-color: hsl(274, 52%, 45%);
-    font-family: sans-rgb(0, 0, 0);
+    background-color: #ffbaba;
     font-family: "Roboto", sans-serif;
-    font-weight: 700;
-
+    border-color: yellow;
 }
 
                                /*VIDEO-CONTENT*/
@@ -302,7 +316,7 @@ a
     cursor: pointer;
     padding: 15px;
     border-radius:25px;
-    transition: 1s;
+    transition: 1.3s;
     border: 2px solid #ea9841;
 }
             /*MEMORY*/
@@ -332,7 +346,7 @@ a
     padding: 15px;
     border-radius:25px;
     border: 2px solid #ea9841;
-    transition: 1s;
+    transition: 1.3s;
 
 }
 
@@ -364,13 +378,9 @@ a
     padding: 15px;
     border-radius:25px;
     border: 2px solid #ea9841;
-    transition: 1s;
+    transition: 1.3s;
 }
-.projects h3:hover
-{
-    transform: scale(1.1);
-    transition: 1s;
-}
+
 
 
 
@@ -515,15 +525,27 @@ a
     width: 75%;
     line-height: 1.5;
 }
+
+
 .curses
 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     margin-bottom: 70px;
     font-family: "Poppins", sans-serif;
     color:#c0c0c0 ;
+    max-width: 190%;
+}
+.curses div {
+   display: fixed;
+    align-items: center;
+    transition: 1s;
+    padding: 12px;
+    margin-bottom: 40px;
+    border: 4px solid #ffffff;
+    width: 800px;
+    height: auto;
 }
 .curses h2
 {
@@ -533,23 +555,18 @@ a
 }
 .curses summary
 {
-    color: #ffffff;
+    
+    color: #ffb794;
     margin-bottom: 50px;
-    margin-left: 40px;
+    margin-left: 50px;
     font-size: 25px;
 }
-.curses div
+#detalhes
 {
-    transition: 1s;
-    padding: 15px;
-    margin-bottom: 40px;
-    border: 4px solid #ffffff;
+    display: flex;
+    flex-direction: column;
 }
-.curses img
-{
-    margin-left: 250px;
-    margin-bottom: 20px;
-}
+
 div span p
 {
     font-family: "poppins", sans-serif;
@@ -558,20 +575,40 @@ div span p
     cursor: pointer;
     transition: 1s;
     margin-top: 30px;
-    margin-left: 220px;
-    width: 30%;
+    margin-left: 290px;
+    width: 25%;
     padding:18px;
     border-radius: 65px;
     border: 2px solid #ffee00;
 }
 .curses span p:hover
 {
-    font-weight: 400;
     background-color: #000000;
     border-color: #fffb00;
     color: #ffffff;
     transition: 1s;
 }
+.udemy img,
+.gft img,
+.front-end img,
+.alura img
+{
+    width: 140px;
+    margin-left: 310px;
+    margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .redirect
 {
     display: flex;
